Add jupyter support for black. Add dash library to project file.

--- a/notebooks/registration_dev.ipynb
+++ b/notebooks/registration_dev.ipynb
@@ -107,7 +107,7 @@
     "VOXEL_SIZE: float = 0.20\n",
     "\n",
     "# FPFH feature parameters\n",
-    "FEATURE_RADIUS: float = 2.00 # NOTE: 2.00\n",
+    "FEATURE_RADIUS: float = 2.00  # NOTE: 2.00\n",
     "FEATURE_NEIGHBOURS: int = 500\n",
     "\n",
     "# Validation and estimation\n",
@@ -119,7 +119,7 @@
     "# RANSAC parameters\n",
     "SAMPLE_COUNT: int = 3\n",
     "MAX_ITERATIONS: int = 200000\n",
-    "CONFIDENCE: float = 0.9999 # NOTE: 0.999\n",
+    "CONFIDENCE: float = 0.9999  # NOTE: 0.999\n",
     "\n",
     "\n",
     "def downsample_and_estimate_normals(cloud: PointCloud, voxel_size: float) -> PointCloud:\n",
@@ -127,33 +127,31 @@
     "    downsampled: PointCloud = downsample_point_cloud(cloud, spacing=voxel_size)\n",
     "    preprocessed: PointCloud = estimate_point_cloud_normals(downsampled)\n",
     "    return preprocessed\n",
-    "    \n",
+    "\n",
     "\n",
     "def registration_worker(\n",
-    "    source_loader: PointCloudLoader, \n",
+    "    source_loader: PointCloudLoader,\n",
     "    target_loader: PointCloudLoader,\n",
     "    preprocessor: Callable[[PointCloud], PointCloud],\n",
     "    registrator: Callable[[PointCloud, PointCloud], ExtendedRegistrationResult],\n",
     ") -> ExtendedRegistrationResult:\n",
     "    \"\"\"Worker function that performs the point cloud registration.\"\"\"\n",
-    "    \n",
+    "\n",
     "    source_cloud: PointCloud = source_loader().unwrap()\n",
     "    target_cloud: PointCloud = target_loader().unwrap()\n",
-    "    \n",
+    "\n",
     "    preprocessed_source: PointCloud = preprocessor(source_cloud)\n",
     "    preprocessed_target: PointCloud = preprocessor(target_cloud)\n",
     "\n",
     "    result: ExtendedRegistratorResult = registrator(\n",
-    "        source=preprocessed_source, \n",
-    "        target=preprocessed_target\n",
+    "        source=preprocessed_source, target=preprocessed_target\n",
     "    )\n",
     "\n",
     "    return result\n",
     "\n",
     "\n",
     "preprocessor: Callable[[PointCloud], PointCloud] = partial(\n",
-    "    downsample_and_estimate_normals, \n",
-    "    voxel_size=VOXEL_SIZE\n",
+    "    downsample_and_estimate_normals, voxel_size=VOXEL_SIZE\n",
     ")\n",
     "\n",
     "registrator = partial(\n",
@@ -166,7 +164,7 @@
     "    sample_count=SAMPLE_COUNT,\n",
     "    edge_check=EDGE_LENGTH,\n",
     "    normal_check=NORMAL_ANGLE,\n",
-    "    scaling = ESTIMATE_SCALE,\n",
+    "    scaling=ESTIMATE_SCALE,\n",
     ")"
    ]
   },
@@ -186,14 +184,14 @@
    "outputs": [],
    "source": [
     "def visualize_registration(\n",
-    "    source: PointCloud, \n",
-    "    target: PointCloud, \n",
-    "    transformation: np.ndarray, \n",
-    "    source_color: list=None,\n",
-    "    target_color: list=None,\n",
-    "    title: str=\"\",\n",
-    "    window_width: int=1024,\n",
-    "    window_height: int=768,\n",
+    "    source: PointCloud,\n",
+    "    target: PointCloud,\n",
+    "    transformation: np.ndarray,\n",
+    "    source_color: list = None,\n",
+    "    target_color: list = None,\n",
+    "    title: str = \"\",\n",
+    "    window_width: int = 1024,\n",
+    "    window_height: int = 768,\n",
     ") -> None:\n",
     "    \"\"\"TODO\"\"\"\n",
     "    source_temp = copy.deepcopy(source)\n",
@@ -203,38 +201,38 @@
     "        source_temp.paint_uniform_color(source_color)\n",
     "    if target_color:\n",
     "        target_temp.paint_uniform_color(target_color)\n",
-    "    \n",
+    "\n",
     "    source_temp.transform(transformation)\n",
-    "    \n",
+    "\n",
     "    vis.draw_geometries(\n",
-    "        geometry_list=[source_temp, target_temp], \n",
-    "        window_name=title, \n",
-    "        width=window_width, \n",
+    "        geometry_list=[source_temp, target_temp],\n",
+    "        window_name=title,\n",
+    "        width=window_width,\n",
     "        height=window_height,\n",
     "    )\n",
     "\n",
     "\n",
     "def batch_visualize_registration(\n",
-    "    storage: dict[int, dict], \n",
-    "    source_color: list=[0.60, 0.20, 0.20],\n",
-    "    target_color: list=[0.20, 0.20, 0.60],\n",
+    "    storage: dict[int, dict],\n",
+    "    source_color: list = [0.60, 0.20, 0.20],\n",
+    "    target_color: list = [0.20, 0.20, 0.60],\n",
     ") -> None:\n",
     "    \"\"\"TODO\"\"\"\n",
     "    for source, registrations in storage.items():\n",
-    "        \n",
+    "\n",
     "        source_cloud: PointCloud = loaders[source]().unwrap()\n",
-    "        \n",
+    "\n",
     "        for target, result in registrations.items():\n",
-    "                \n",
+    "\n",
     "            target_cloud: PointCloud = loaders[target]().unwrap()\n",
-    "            \n",
+    "\n",
     "            visualize_registration(\n",
-    "                source = source_cloud,\n",
-    "                target = target_cloud,\n",
-    "                transformation = result.transformation,\n",
-    "                source_color = source_color,\n",
-    "                target_color = target_color,\n",
-    "                title = f\"Source: {source}, target: {target}\"\n",
+    "                source=source_cloud,\n",
+    "                target=target_cloud,\n",
+    "                transformation=result.transformation,\n",
+    "                source_color=source_color,\n",
+    "                target_color=target_color,\n",
+    "                title=f\"Source: {source}, target: {target}\",\n",
     "            )"
    ]
   },
@@ -245,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def log_registration(source, target, result, elapsed: float=0.0) -> None:\n",
+    "def log_registration(source, target, result, elapsed: float = 0.0) -> None:\n",
     "    logger.info(\"\")\n",
     "    logger.info(f\"--------------------- Registration --------------------\")\n",
     "    logger.info(f\" - Source, target:        {source}, {target}\")\n",
@@ -471,13 +469,13 @@
     "\n",
     "for i in range(10):\n",
     "    test_result: ExtendedRegistrationResult = registration_worker(\n",
-    "        source_loader = loaders[test_source],\n",
-    "        target_loader = loaders[test_target],\n",
-    "        preprocessor = preprocessor,\n",
-    "        registrator = registrator,\n",
+    "        source_loader=loaders[test_source],\n",
+    "        target_loader=loaders[test_target],\n",
+    "        preprocessor=preprocessor,\n",
+    "        registrator=registrator,\n",
     "    )\n",
-    "    \n",
-    "    logger.info(test_result)\n"
+    "\n",
+    "    logger.info(test_result)"
    ]
   },
   {
@@ -491,10 +489,10 @@
     "\n",
     "if visualize_test:\n",
     "    visualize_registration(\n",
-    "        source = loaders[test_source]().unwrap(), \n",
-    "        target = loaders[test_target]().unwrap(), \n",
-    "        transformation = test_result.transformation,\n",
-    "        title = f\"Test case: {test_source}, {test_target}\",\n",
+    "        source=loaders[test_source]().unwrap(),\n",
+    "        target=loaders[test_target]().unwrap(),\n",
+    "        transformation=test_result.transformation,\n",
+    "        title=f\"Test case: {test_source}, {test_target}\",\n",
     "    )"
    ]
   },
@@ -694,12 +692,12 @@
     "\n",
     "    for target in index.targets:\n",
     "        start: float = time()\n",
-    "        \n",
+    "\n",
     "        result: ExtendedRegistrationResult = registration_worker(\n",
-    "            source_loader = loaders[source],\n",
-    "            target_loader = loaders[target],\n",
-    "            preprocessor = preprocessor,\n",
-    "            registrator = registrator,\n",
+    "            source_loader=loaders[source],\n",
+    "            target_loader=loaders[target],\n",
+    "            preprocessor=preprocessor,\n",
+    "            registrator=registrator,\n",
     "        )\n",
     "\n",
     "        end: float = time()\n",
@@ -730,7 +728,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_visualize_registration(storage = result_storage[\"feature_matching\"])"
+    "batch_visualize_registration(storage=result_storage[\"feature_matching\"])"
    ]
   },
   {
@@ -760,8 +758,8 @@
     "\n",
     "icp_registrator = partial(\n",
     "    register_point_cloud_icp,\n",
-    "    distance_threshold = icp_coarse_parameters[\"distance\"],\n",
-    "    distance_measure = icp_coarse_parameters[\"estimator\"],\n",
+    "    distance_threshold=icp_coarse_parameters[\"distance\"],\n",
+    "    distance_measure=icp_coarse_parameters[\"estimator\"],\n",
     ")"
    ]
   },
@@ -854,8 +852,10 @@
     "    results: dict[int, ExtendedRegistrationResult] = dict()\n",
     "\n",
     "    for target in index.targets:\n",
-    "        \n",
-    "        transformation: np.ndarray = result_storage[\"feature_matching\"][source][target].transformation\n",
+    "\n",
+    "        transformation: np.ndarray = result_storage[\"feature_matching\"][source][\n",
+    "            target\n",
+    "        ].transformation\n",
     "\n",
     "        source_cloud: PointCloud = loaders[source]().unwrap()\n",
     "        target_cloud: PointCloud = loaders[target]().unwrap()\n",
@@ -864,9 +864,7 @@
     "        target_prepped: PointCloud = icp_preprocessor(target_cloud)\n",
     "\n",
     "        result: ExtendedRegistrationResult = icp_registrator(\n",
-    "            source = source_prepped,\n",
-    "            target = target_prepped,\n",
-    "            transformation = transformation\n",
+    "            source=source_prepped, target=target_prepped, transformation=transformation\n",
     "        )\n",
     "\n",
     "        logger.info(\"\")\n",
@@ -888,9 +886,9 @@
    "outputs": [],
    "source": [
     "batch_visualize_registration(\n",
-    "    storage = result_storage[\"incremental_coarse\"],\n",
-    "    source_color = [ 0.60, 0.20, 0.20 ],\n",
-    "    target_color = [ 0.20, 0.20, 0.60 ],\n",
+    "    storage=result_storage[\"incremental_coarse\"],\n",
+    "    source_color=[0.60, 0.20, 0.20],\n",
+    "    target_color=[0.20, 0.20, 0.60],\n",
     ")"
    ]
   },
@@ -931,7 +929,7 @@
     "    results: dict[int, dict[int, ExtendedRegistrationResult]],\n",
     ") -> reg.PoseGraph:\n",
     "    \"\"\"Builds a pose graph.\"\"\"\n",
-    "    \n",
+    "\n",
     "    odometry = np.identity(4)\n",
     "\n",
     "    pose_graph = reg.PoseGraph()\n",
@@ -944,29 +942,33 @@
     "            logger.info(f\"{source_id}, {target_id}\")\n",
     "\n",
     "            if target_id == source_id + 1:  # odometry case\n",
-    "                \n",
+    "\n",
     "                odometry = np.dot(result.transformation, odometry)\n",
-    "                \n",
+    "\n",
     "                pose_graph.nodes.append(\n",
     "                    reg.PoseGraphNode(\n",
     "                        np.linalg.inv(odometry),\n",
     "                    )\n",
     "                )\n",
-    "                pose_graph.edges.append(reg.PoseGraphEdge(\n",
-    "                    source_id,\n",
-    "                    target_id,\n",
-    "                    result.transformation,\n",
-    "                    result.information,\n",
-    "                    uncertain=False, # NOTE: False\n",
-    "                ))\n",
+    "                pose_graph.edges.append(\n",
+    "                    reg.PoseGraphEdge(\n",
+    "                        source_id,\n",
+    "                        target_id,\n",
+    "                        result.transformation,\n",
+    "                        result.information,\n",
+    "                        uncertain=False,  # NOTE: False\n",
+    "                    )\n",
+    "                )\n",
     "            else:  # loop closure case\n",
-    "                pose_graph.edges.append(reg.PoseGraphEdge(\n",
-    "                    source_id,\n",
-    "                    target_id,\n",
-    "                    result.transformation,\n",
-    "                    result.information,\n",
-    "                    uncertain=True,\n",
-    "                ))\n",
+    "                pose_graph.edges.append(\n",
+    "                    reg.PoseGraphEdge(\n",
+    "                        source_id,\n",
+    "                        target_id,\n",
+    "                        result.transformation,\n",
+    "                        result.information,\n",
+    "                        uncertain=True,\n",
+    "                    )\n",
+    "                )\n",
     "\n",
     "    return pose_graph\n",
     "\n",
@@ -976,10 +978,10 @@
     "    correspondence_distance: float,\n",
     "    prune_threshold: float,\n",
     "    preference_loop_closure: float,\n",
-    "    reference_node: int=-1,\n",
+    "    reference_node: int = -1,\n",
     ") -> reg.PoseGraph:\n",
     "    \"\"\"TODO\"\"\"\n",
-    "    \n",
+    "\n",
     "    option = reg.GlobalOptimizationOption(\n",
     "        max_correspondence_distance=correspondence_distance,\n",
     "        edge_prune_threshold=prune_threshold,\n",
@@ -1059,15 +1061,15 @@
     "with util.VerbosityContextManager(util.VerbosityLevel.Debug) as cm:\n",
     "    optimized_graph: reg.PoseGraph = optimize_pose_graph(\n",
     "        initial_graph,\n",
-    "        correspondence_distance = 0.01,\n",
-    "        prune_threshold = 0.25,\n",
-    "        preference_loop_closure = 1.0,\n",
-    "        reference_node = 0,\n",
+    "        correspondence_distance=0.01,\n",
+    "        prune_threshold=0.25,\n",
+    "        preference_loop_closure=1.0,\n",
+    "        reference_node=0,\n",
     "    )\n",
     "\n",
     "\n",
     "for identifier in result_storage[\"feature_matching\"]:\n",
-    "    logger.info(optimized_graph.nodes[identifier].pose)\n"
+    "    logger.info(optimized_graph.nodes[identifier].pose)"
    ]
   },
   {
@@ -1080,11 +1082,11 @@
     "transformed_clouds: list[PointCloud] = list()\n",
     "\n",
     "for identifier in result_storage[\"incremental_coarse\"]:\n",
-    "    \n",
+    "\n",
     "    cloud: PointCloud = loaders[identifier]().unwrap()\n",
     "    cloud.transform(optimized_graph.nodes[identifier].pose)\n",
     "    transformed_clouds.append(cloud)\n",
-    "    \n",
+    "\n",
     "vis.draw_geometries(transformed_clouds)"
    ]
   },
