--- a/notebooks/registration_dev.ipynb
+++ b/notebooks/registration_dev.ipynb
@@ -119,7 +119,7 @@
     "\n",
     "# Validation and estimation\n",
     "CORRESPONDENCE_DISTANCE: float = 0.20\n",
-    "EDGE_LENGTH: float = 0.90 # NOTE: 0.95\n",
+    "EDGE_LENGTH: float = 0.90  # NOTE: 0.95\n",
     "NORMAL_ANGLE: float = 5.0\n",
     "\n",
     "ESTIMATE_SCALE: bool = True\n",
@@ -186,8 +186,11 @@
     "def decompose_transformation(transformation: np.ndarray) -> tuple:\n",
     "    \"\"\"Decomposes a 3D rigid body transformation into scale, rotation, and translation.\"\"\"\n",
     "\n",
-    "    assert transformation.shape == (4, 4), \"transformation is not a 3D rigid-body transformation\"\n",
-    "    \n",
+    "    assert transformation.shape == (\n",
+    "        4,\n",
+    "        4,\n",
+    "    ), \"transformation is not a 3D rigid-body transformation\"\n",
+    "\n",
     "    scaled_rotation: np.ndarray = transformation[:3, :3]\n",
     "    translation: np.ndarray = transformation[:3, 3]\n",
     "\n",
@@ -196,11 +199,14 @@
     "\n",
     "    return scale, rotation, translation\n",
     "\n",
-    "def log_registration(source: int, target: int, result: ExtendedRegistrationResult) -> None:\n",
+    "\n",
+    "def log_registration(\n",
+    "    source: int, target: int, result: ExtendedRegistrationResult\n",
+    ") -> None:\n",
     "    \"\"\"TODO\"\"\"\n",
     "\n",
     "    scale, rotation, translation = decompose_transformation(result.transformation)\n",
-    "    \n",
+    "\n",
     "    logger.info(\"\")\n",
     "    logger.info(f\"Source:       {source}\")\n",
     "    logger.info(f\"Target:       {target}\")\n",
