--- a/notebooks/registration_dev.ipynb
+++ b/notebooks/registration_dev.ipynb
@@ -159,6 +159,7 @@
    "source": [
     "from scipy.spatial.transform import Rotation\n",
     "\n",
+    "\n",
     "def decompose_transformation(transformation: np.ndarray) -> tuple:\n",
     "    \"\"\"Decomposes a 3D rigid body transformation into scale, rotation, and translation.\"\"\"\n",
     "\n",
@@ -187,7 +188,7 @@
     "    rotation: Rotation = Rotation.from_matrix(rotation)\n",
     "\n",
     "    yaw, roll, pitch = rotation.as_euler(\"ZYX\", degrees=True)\n",
-    "    \n",
+    "\n",
     "    return yaw, roll, pitch\n",
     "\n",
     "\n",
@@ -780,22 +781,22 @@
     "    target_cloud: PointCloud = loaders[test_target]().unwrap()\n",
     "\n",
     "    for i in range(10):\n",
-    "        \n",
+    "\n",
     "        start: float = time()\n",
-    "        \n",
+    "\n",
     "        result: ExtendedRegistrationResult = registration_worker(\n",
     "            source_loader=lambda: Ok(source_cloud),\n",
     "            target_loader=lambda: Ok(target_cloud),\n",
     "            preprocessor=preprocessor,\n",
     "            registrator=registrator,\n",
     "        )\n",
-    "    \n",
+    "\n",
     "        end: float = time()\n",
-    "    \n",
+    "\n",
     "        logger.info(f\"Ransac time: {end - start}\")\n",
-    "    \n",
+    "\n",
     "        log_registration(0, 3, result)\n",
-    "        \n",
+    "\n",
     "        test_results.append(result)"
    ]
   },
@@ -821,29 +822,30 @@
     "\n",
     "# TODO: Implement plotting of registration results\n",
     "\n",
+    "\n",
     "def create_registration_figure() -> go.Figure:\n",
     "    \"\"\"TODO\"\"\"\n",
     "\n",
     "    figure: go.Figure = make_subplots(\n",
-    "        rows=2, \n",
+    "        rows=2,\n",
     "        cols=3,\n",
     "        column_widths=[1, 1, 1],\n",
     "        row_heights=[1, 1],\n",
-    "        subplot_titles=(\"Plot 1\", \"Plot 2\", \"Plot 3\", \"Plot 4\", \"Plot 5\", \"Plot 6\")\n",
+    "        subplot_titles=(\"Plot 1\", \"Plot 2\", \"Plot 3\", \"Plot 4\", \"Plot 5\", \"Plot 6\"),\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    return figure\n",
-    "    \n",
+    "\n",
     "\n",
     "def create_registration_traces(\n",
-    "    result: ExtendedRegistrationResult, \n",
-    "    name: str, \n",
-    "    legendgroup: int, \n",
-    "    color: str=\"blue\",\n",
+    "    result: ExtendedRegistrationResult,\n",
+    "    name: str,\n",
+    "    legendgroup: int,\n",
+    "    color: str = \"blue\",\n",
     ") -> dict:\n",
     "    \"\"\"Creates graph objects for a registration result. The fitness, error, and correspondence count\n",
     "    is plotted in addition to the transformation components\"\"\"\n",
-    "    \n",
+    "\n",
     "    scale, rotation, translation = decompose_transformation(result.transformation)\n",
     "    yaw, roll, pitch = decompose_rotation(rotation)\n",
     "\n",
@@ -898,7 +900,7 @@
     "        legendgroup=legendgroup,\n",
     "        showlegend=False,\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    traces[\"translation\"] = go.Bar(\n",
     "        name=name,\n",
     "        x=[\"Trans-x\", \"Trans-y\", \"Trans-z\"],\n",
@@ -908,7 +910,7 @@
     "        legendgroup=legendgroup,\n",
     "        showlegend=False,\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    return traces"
    ]
   },
@@ -3183,22 +3185,22 @@
     "figure: go.Figure = create_registration_figure()\n",
     "\n",
     "# colors: list[str] = px.colors.sequential.Plasma_r\n",
-    "colors: list[str] = px.colors.qualitative.G10 \n",
+    "colors: list[str] = px.colors.qualitative.G10\n",
     "\n",
     "\n",
     "for index, (result, color) in enumerate(zip(test_results, colors)):\n",
-    "    \n",
+    "\n",
     "    traces: dict = create_registration_traces(\n",
-    "        result, \n",
-    "        name=f\"Regi. {index}\", \n",
-    "        legendgroup=index, \n",
+    "        result,\n",
+    "        name=f\"Regi. {index}\",\n",
+    "        legendgroup=index,\n",
     "        color=color,\n",
     "    )\n",
     "\n",
     "    figure.add_trace(traces[\"fitness\"], row=1, col=1)\n",
     "    figure.add_trace(traces[\"rmse\"], row=1, col=2)\n",
     "    figure.add_trace(traces[\"correspondences\"], row=1, col=3)\n",
-    "    \n",
+    "\n",
     "    figure.add_trace(traces[\"scale\"], row=2, col=1)\n",
     "    figure.add_trace(traces[\"rotation\"], row=2, col=2)\n",
     "    figure.add_trace(traces[\"translation\"], row=2, col=3)\n",
