Add common function body for building feature-based and ICP registrators.

--- a/notebooks/registration_dev.ipynb
+++ b/notebooks/registration_dev.ipynb
@@ -22,6 +22,14 @@
       "[Open3D INFO] WebRTC GUI backend enabled.\n",
       "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Can't use license /var/tmp/agisoft/licensing/licenses/metashape-pro.lic: License expired\n",
+      "No license server found\n"
+     ]
     }
    ],
    "source": [
@@ -196,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "59fa67a2-b3d6-4e51-9967-7df97d9fa2d1",
    "metadata": {},
    "outputs": [
@@ -204,8 +212,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-07-26 19:44:59.002\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m33\u001b[0m - \u001b[1mRegistrator: global\u001b[0m\n",
-      "\u001b[32m2024-07-26 19:44:59.003\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m33\u001b[0m - \u001b[1mRegistrator: refinement\u001b[0m\n"
+      "\u001b[32m2024-07-29 18:33:53.426\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m33\u001b[0m - \u001b[1mRegistrator: global\u001b[0m\n",
+      "\u001b[32m2024-07-29 18:33:53.427\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m33\u001b[0m - \u001b[1mRegistrator: refinement\u001b[0m\n"
      ]
     },
     {
@@ -214,7 +222,7 @@
        "'\\npreprocessors: list[PointCloudProcessor] = [\\n    build_point_cloud_processor(item).unwrap()\\n    for item in module_config[\"preprocessors\"]\\n]\\n'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "ed211514-f2a6-4254-adf6-b8b1f4d8ed3d",
    "metadata": {},
    "outputs": [
@@ -283,30 +291,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-07-26 19:42:59.076\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m6\u001b[0m - \u001b[1m\u001b[0m\n",
-      "\u001b[32m2024-07-26 19:42:59.079\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m7\u001b[0m - \u001b[1mSource:       0\u001b[0m\n",
-      "\u001b[32m2024-07-26 19:42:59.080\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m8\u001b[0m - \u001b[1mTarget:       3\u001b[0m\n",
-      "\u001b[32m2024-07-26 19:42:59.081\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1mCorresp.:     12484\u001b[0m\n",
-      "\u001b[32m2024-07-26 19:42:59.082\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mFitness:      0.4253782199809186\u001b[0m\n",
-      "\u001b[32m2024-07-26 19:42:59.083\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m11\u001b[0m - \u001b[1mInlier RMSE:  0.0929069445524382\u001b[0m\n",
-      "\u001b[32m2024-07-26 19:42:59.083\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1mTrans. scale:    0.9901889881432113\u001b[0m\n",
-      "\u001b[32m2024-07-26 19:42:59.084\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m13\u001b[0m - \u001b[1mTrans. trans.:   [ 7.08632501 11.79316905 -0.43115322]\u001b[0m\n",
-      "\u001b[32m2024-07-26 19:42:59.086\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m14\u001b[0m - \u001b[1mTrans. rot.:     [[ 9.98804342e-01 -4.88832754e-02  5.58417270e-04]\n",
-      " [ 4.88816222e-02  9.98801021e-01  2.66605970e-03]\n",
-      " [-6.88073470e-04 -2.63557566e-03  9.99996290e-01]]\u001b[0m\n",
-      "\u001b[32m2024-07-26 19:42:59.087\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m15\u001b[0m - \u001b[1m\u001b[0m\n",
-      "\u001b[32m2024-07-26 19:42:59.847\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m6\u001b[0m - \u001b[1m\u001b[0m\n",
-      "\u001b[32m2024-07-26 19:42:59.848\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m7\u001b[0m - \u001b[1mSource:       0\u001b[0m\n",
-      "\u001b[32m2024-07-26 19:42:59.849\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m8\u001b[0m - \u001b[1mTarget:       3\u001b[0m\n",
-      "\u001b[32m2024-07-26 19:42:59.850\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1mCorresp.:     14744\u001b[0m\n",
-      "\u001b[32m2024-07-26 19:42:59.852\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mFitness:      0.5023851710508382\u001b[0m\n",
-      "\u001b[32m2024-07-26 19:42:59.852\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m11\u001b[0m - \u001b[1mInlier RMSE:  0.13847125038020258\u001b[0m\n",
-      "\u001b[32m2024-07-26 19:42:59.853\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1mTrans. scale:    0.9901889881432111\u001b[0m\n",
-      "\u001b[32m2024-07-26 19:42:59.854\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m13\u001b[0m - \u001b[1mTrans. trans.:   [ 6.6993482  11.40786578 -0.42382021]\u001b[0m\n",
-      "\u001b[32m2024-07-26 19:42:59.856\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m14\u001b[0m - \u001b[1mTrans. rot.:     [[ 0.99823821 -0.05925077 -0.00313321]\n",
-      " [ 0.05924428  0.99824125 -0.00212683]\n",
-      " [ 0.00325372  0.00193746  0.99999283]]\u001b[0m\n",
-      "\u001b[32m2024-07-26 19:42:59.857\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m15\u001b[0m - \u001b[1m\u001b[0m\n"
+      "\u001b[32m2024-07-29 16:49:09.180\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m6\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-07-29 16:49:09.181\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m7\u001b[0m - \u001b[1mSource:       0\u001b[0m\n",
+      "\u001b[32m2024-07-29 16:49:09.182\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m8\u001b[0m - \u001b[1mTarget:       3\u001b[0m\n",
+      "\u001b[32m2024-07-29 16:49:09.183\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1mCorresp.:     12476\u001b[0m\n",
+      "\u001b[32m2024-07-29 16:49:09.185\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mFitness:      0.42510562900368\u001b[0m\n",
+      "\u001b[32m2024-07-29 16:49:09.186\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m11\u001b[0m - \u001b[1mInlier RMSE:  0.09300614680802845\u001b[0m\n",
+      "\u001b[32m2024-07-29 16:49:09.187\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1mTrans. scale:    0.9948146923102374\u001b[0m\n",
+      "\u001b[32m2024-07-29 16:49:09.189\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m13\u001b[0m - \u001b[1mTrans. trans.:   [ 6.87220817 11.74153752 -0.21495641]\u001b[0m\n",
+      "\u001b[32m2024-07-29 16:49:09.190\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m14\u001b[0m - \u001b[1mTrans. rot.:     [[ 0.99867315 -0.05126712 -0.0048595 ]\n",
+      " [ 0.05127641  0.99868287  0.00180654]\n",
+      " [ 0.00476048 -0.00205332  0.99998656]]\u001b[0m\n",
+      "\u001b[32m2024-07-29 16:49:09.191\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m15\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-07-29 16:49:10.001\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m6\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-07-29 16:49:10.004\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m7\u001b[0m - \u001b[1mSource:       0\u001b[0m\n",
+      "\u001b[32m2024-07-29 16:49:10.007\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m8\u001b[0m - \u001b[1mTarget:       3\u001b[0m\n",
+      "\u001b[32m2024-07-29 16:49:10.009\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1mCorresp.:     14663\u001b[0m\n",
+      "\u001b[32m2024-07-29 16:49:10.011\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mFitness:      0.49962518740629686\u001b[0m\n",
+      "\u001b[32m2024-07-29 16:49:10.013\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m11\u001b[0m - \u001b[1mInlier RMSE:  0.13944238345533272\u001b[0m\n",
+      "\u001b[32m2024-07-29 16:49:10.015\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1mTrans. scale:    0.9948146923102376\u001b[0m\n",
+      "\u001b[32m2024-07-29 16:49:10.017\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m13\u001b[0m - \u001b[1mTrans. trans.:   [ 6.6718127  11.3494237  -0.21625952]\u001b[0m\n",
+      "\u001b[32m2024-07-29 16:49:10.019\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m14\u001b[0m - \u001b[1mTrans. rot.:     [[ 0.99830182 -0.05819045 -0.00271152]\n",
+      " [ 0.05817916  0.99829785 -0.00407258]\n",
+      " [ 0.00294389  0.00390791  0.99998803]]\u001b[0m\n",
+      "\u001b[32m2024-07-29 16:49:10.021\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m15\u001b[0m - \u001b[1m\u001b[0m\n"
      ]
     }
    ],
